fixed the process line collapsing

--- a/styles/02-layout/_process.scss
+++ b/styles/02-layout/_process.scss
@@ -1,7 +1,7 @@
 .process {
   margin-top: 12rem;
   text-align: center;
-  padding: 0 4.5rem 0 4.5rem;
+  padding: 1rem 4.5rem 0 4.5rem;
 
   @media (min-width: $md-breakpoint) {
     text-align: left;
